// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteAdminProductSubscriptionBillingLink linked billing 1`] = `
<div
  className="site-admin-product-subscription-billing-link"
>
  <div
    className="d-flex align-items-center"
  >
    <a
      className="mr-2 d-flex align-items-center"
      href="https://example.com"
    >
      View billing subscription 
      <ExternalLinkIcon
        className="icon-inline ml-1"
      />
    </a>
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Unlink
    </button>
  </div>
</div>
`;

exports[`SiteAdminProductSubscriptionBillingLink no linked billing 1`] = `
<div
  className="site-admin-product-subscription-billing-link"
>
  <div
    className="d-flex align-items-center"
  >
    <button
      className="btn btn-secondary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Link billing subscription
    </button>
  </div>
</div>
`;
